test/oscar/compiler/errors/valAlreadyDeclared.oscar
def main() => unit = {
  int x = 1;
  int x = 2; 
}